Prevent 'View More' flicker
Fixes DD 78973 437

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_tableView.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_tableView.scss
@@ -97,7 +97,6 @@
     }
 
     tbody {
-        max-height: 500px;
         overflow-y: auto;
 
         tr:nth-of-type(n+10) {
@@ -107,9 +106,9 @@
 
 
     .sticky tbody {
-        max-height: 800px;
+        max-height: 630px;
 
-        tr:nth-of-type(n+10) {
+        tr:nth-of-type(n+20) {
             display: inline-flex;
         }
     }
